# update_project1

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: a93169b5fc32_initial_migration.py
app/: main.py
app/api/: deps.py  except_endpoints.py
app/api/endpoints/: auth.py  tasks.py
app/core/: config.py
app/domain/essence/models/: __init__.py  task.py  user.py
app/domain/essence/schemas/: task.py  token.py  user.py
app/domain/value_objects/: time_interval.py
app/infrastructure/: db.py  dependency.py  resources.py
app/infrastructure/repository/: task_read_repo.py  task_user_repo_session.py  task_write_repo.py  user_repo.py
app/services/: auth_services.py  security_service.py  task_services.py  token_creation_service.py
tests/: conftest.py
tests/api/: test_auth_endpoints.py  test_task_endpoints.py
tests/repositories/: test_task_read_repo.py  test_task_write_repo.py  test_user_repo.py
tests/services/: test_auth_services.py  test_security_service.py  test_task_services.py  test_token_create.py
